# TideMark

./: .gitignore  .verification-task-2.md  CLAUDE.md  EXT-001-VERIFICATION-REPORT.md  README.md  SPEC.md  TASK-10-AC-VERIFICATION.md  TASK-10-COMPLETION-CHECKLIST.md  TASK-11-AC-VERIFICATION.md  TASK-13-AC-VERIFICATION.md  TASK-13-COMPLETION-CHECKLIST.md  TASK-14-AC-VERIFICATION.md  TASK-15-AC-VERIFICATION.md  TASK-16-AC-VERIFICATION.md  TASK-17-COMPLETION-CHECKLIST.md  TASK-17-VERIFICATION.md  TASK-18-AC-VERIFICATION.md  TASK-19-AC-VERIFICATION.md  TASK-20-AC-VERIFICATION.md  TASK-21-AC-VERIFICATION.md  TASK-21-COMPLETION-CHECKLIST.md  TASK-22-AC-VERIFICATION.md  TASK-4-COMPLETION-CHECKLIST.md  TASK-9-AC-VERIFICATION.md  TASK-9-VERIFICATION.md  VERIFICATION.md  index.html  package-lock.json  package.json  test-asr-api-keys.sh  test-asr.sh  test-auth.sh  test-cloud-asr.sh  test-cloud-sync-desktop.sh  test-data-records.json  test-download-backend.sh  test-gpu-about.sh  test-live-recording.sh  test-record-to-download.sh  test-records.sh  (+5 more)
.github/: dependabot.yml
cloud-sync/: README.md  VERIFICATION-REPORT.md  package-lock.json  package.json  schema.sql  test-acceptance-criteria.sh  tsconfig.json  wrangler.toml
extension/: QUICK-START.md  README.md  TASK-3-VERIFICATION.md  TASK-4-VERIFICATION.md  TASK-5-ACCEPTANCE-VERIFICATION.md  TASK-5-COMPLETION-CHECKLIST.md  TASK-5-SUMMARY.md  VERIFICATION-AC.md  VERIFICATION.md  build.js  generate-icons.js  manifest.json  package-lock.json  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+54 files in other folders)
